# simbiota-tlsh

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: builder.rs  diff.rs  digest.rs  hash.rs  lib.rs  main.rs  tlsh.rs  util.rs
src/vec/: calc.rs  cpu.rs  mod.rs
src/vec/aarch64/: neon.rs
src/vec/x86/: avx2.rs  sse2.rs
test/data/: random.txt  y.tlsh.txt
