[package]
name = "simbiota-tlsh"
version = "1.0.0"
edition = "2021"

# publishing
description = "A pure-rust implementation of Trendmicro's TLSH algorithm, featuring the same optimizations found in the reference implementation."
authors = ["Ukatemi Technologies Ltd"]
license-file = "LICENSE"
homepage = "https://simbiota.io"
repository = "https://github.com/simbiota/simbiota-tlsh"
readme = "README.md"
keywords = ["tlsh", "similarity-hash", "hash", "locality", "locality-sensitive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tlsh"
path = "src/bin/cli.rs"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
hex="0.4.3"
memmap2 = "0.9.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
overflow-checks = false
debug = 1
